# stm32_learn

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  main.c  openocd.cfg  package.json  script.scr  stm32_learn.ioc  stm32f1xx_hal_msp.c  stm32f1xx_it.c
Boot/: STM32F103XB_FLASH.ld  startup_stm32f103xb.s  system_stm32f1xx.c
Core/Src/: gpio.c  i2c.c  main.c  stm32f1xx_hal_msp.c  usart.c
Inc/: eeprom.h  lcd.h  main.h  max7219.h  mcp4725.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
Lib/: printf.c
Src/: eeprom.c  lcd.c  main.c  max7219.c  mcp4725.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
